Whoops - remember its a string

--- a/default.config
+++ b/default.config
@@ -53,4 +53,4 @@ ENV_POPULATE = [
 ]
 
 # Used by deployment server in ./helper - the supervisord name for the app
-DEPLOY_SUPER=nbmn
+DEPLOY_SUPER='nbmn'
