Slack notifcation on night delete/save

--- a/default.config
+++ b/default.config
@@ -35,6 +35,9 @@ GOOGLE_CLIENT_ID = ''
 GOOGLE_CLIENT_SECRET = ''
 ADMINS=[]
 
+SLACK_URL_BASE = ''
+SLACK_HOOK = ''
+
 # Leave these alone unless you know what you are doing
 OAUTHLIB_RELAX_TOKEN_SCOPE=0
 OAUTHLIB_INSECURE_TRANSPORT=0
