Use our shiny new OMDB API key

--- a/default.config
+++ b/default.config
@@ -13,7 +13,12 @@
 # DEBUG  - Whether or not the app should run in debug mode.  This is
 #          used by Flask as well as our own code
 #
+# LOG_SAVES - If True, all database saves are logged to stdout
+#
 # FLASK_SECRET - The key used by Flask for encrypted cookies.
+#
+# GOOGLE_AUTH - If False, no login is provided - even if Google credentials
+#               are supplied (see below)
 #
 # GOOGLE_CLIENT_ID - (optional) Client ID for Google OAuth2 Login
 # GOOGLE_CLIENT_SECRET - (optional) Secret for Google OAuth2 Login
@@ -21,8 +26,26 @@
 # ADMINS - list of emails allowed to actually change data.  Note that
 #          this means that you need to turn google authentication on.
 #
+# SLACK_URL_BASE - Used for URL's posted into the Slack channel
+# SLACK_HOOK - Slack endpoint for notifications
+#
+# OAUTHLIB_RELAX_TOKEN_SCOPE - Used for OAuth testing
+# OAUTHLIB_INSECURE_TRANSPORT - Used for OAuth testing
+#
+# DB_BACKEND - GLUDB backend for database
+# SQLITE_FILENAME - Required if DB_BACKEND is `sqlite`
+# MONGODB_URL - Required if DB_BACKEND is `mongodb`
+#
+# ENV_POPULATE - List of config variables to add to process env - can
+#                be used to pass values to sub-processes or configure
+#                libraries that examine env variables
+#
+# DEPLOY_SUPER - Used for automated deploy on Git push: see ./helper
 ######################################################################
 
+# pylama:ignore=D100,E225,E501
+
+# Basics
 BANNER='Application is running with the default config - FIX THIS IN PROD'
 HOST='127.0.0.1'
 PORT=8081
@@ -30,22 +53,23 @@ DEBUG=True
 LOG_SAVES=True
 FLASK_SECRET="This is a secret key, but not that secret"
 
+# OMDB API config
+OMDB_API_KEY=""
+
+# Google and auth config
 GOOGLE_AUTH=False  # To turn off all logins
 GOOGLE_CLIENT_ID = ''
 GOOGLE_CLIENT_SECRET = ''
 ADMINS=[]
 
+# Slack config
 SLACK_URL_BASE = ''
 SLACK_HOOK = ''
 
-# Leave these alone unless you know what you are doing
-OAUTHLIB_RELAX_TOKEN_SCOPE=0
-OAUTHLIB_INSECURE_TRANSPORT=0
-
-
+# DB Config
 DB_BACKEND='sqlite'
-SQLITE_FILENAME='.testingdb.sqlite'               # Only used if DB_BACKEND='sqlite'
-MONGODB_URL='mongodb://localhost:27017/nbmn_test' # Only DB_BACKEND='mongodb'
+SQLITE_FILENAME='.testingdb.sqlite'                # Only used if DB_BACKEND='sqlite'
+MONGODB_URL='mongodb://localhost:27017/nbmn_test'  # Only DB_BACKEND='mongodb'
 
 # Config variables that should be set in the environment
 ENV_POPULATE = [
@@ -55,3 +79,7 @@ ENV_POPULATE = [
 
 # Used by deployment server in ./helper - the supervisord name for the app
 DEPLOY_SUPER='nbmn'
+
+# Leave these alone unless you know what you are doing
+OAUTHLIB_RELAX_TOKEN_SCOPE=0
+OAUTHLIB_INSECURE_TRANSPORT=0
