--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,10 @@ verify_ssl = true
 url = "https://pypi.python.org/simple"
 name = "pypi"
 
+[requires]
+
+python_version = "3.6"
+
 
 [dev-packages]
 
