--- a/Pipfile
+++ b/Pipfile
@@ -1,23 +1,16 @@
 [[source]]
-
 verify_ssl = true
 url = "https://pypi.python.org/simple"
 name = "pypi"
 
-
 [requires]
-
 python_version = "3.6"
 
-
 [dev-packages]
-
 nose = "*"
 
-
 [packages]
-
-flask = "*"
+flask = ">=0.12.3"
 blinker = "*"
 flask-dance = "*"
 gludb = {editable = true, git = "https://github.com/memphis-iis/GLUDB"}
