--- a/default.config
+++ b/default.config
@@ -60,6 +60,7 @@ OMDB_API_KEY=""
 GOOGLE_AUTH=False  # To turn off all logins
 GOOGLE_CLIENT_ID = ''
 GOOGLE_CLIENT_SECRET = ''
+GOOGLE_REDIRECT_URL = None
 ADMINS=[]
 
 # Slack config
